--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	</parent>
 
 	<properties>
+		<maven-compiler-plugin.source>1.8</maven-compiler-plugin.source>
+		<maven-compiler-plugin.target>1.8</maven-compiler-plugin.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
 		<springboot-javafx.version>1.3.27</springboot-javafx.version>
@@ -74,17 +76,10 @@
 			<resource>
 				<filtering>false</filtering>
 				<directory>src/main/java</directory>
-				<includes>
-					<include>**/*.fxml</include>
-				</includes>
 			</resource>
 			<resource>
 				<filtering>false</filtering>
 				<directory>src/main/resources</directory>
-				<includes>
-					<include>**/*.fxml</include>
-					<include>**/*.css</include>
-				</includes>
 			</resource>
 		</resources>
 
@@ -93,6 +88,20 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.7.0</version>
+				<configuration>
+					<source>${maven-compiler-plugin.source}</source>
+					<target>${maven-compiler-plugin.target}</target>
+					<verbose>true</verbose>
+					<fork>true</fork>
+					<executable>${JAVA_HOME}/bin/javac</executable>
+					<compilerVersion>1.8</compilerVersion>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
